--- a/public/assets/css-rtl/closed-sidemenu.scss
+++ b/public/assets/css-rtl/closed-sidemenu.scss
@@ -463,10 +463,10 @@ slide is-expanded side-menu__item {
 .side-menu__item.active .side-menu__icon, .side-menu__item:hover .side-menu__icon, .side-menu__item:focus .side-menu__icon {
 	color: #0162e8;
 }
-.slide:hover .side-menu__label, .slide:hover .angle, .slide:hover .side-menu__icon {
-	color: #0162e8 !important;
-	fill: #0162e8 !important;
-}
+// .slide:hover .side-menu__label, .slide:hover .angle, .slide:hover .side-menu__icon {
+// 	color: #ffffff !important;
+// 	fill: #ffffff !important;
+// }
 .slide.is-expanded .side-menu__label, .slide.is-expanded .side-menu__icon, .slide.is-expanded .angle {
 	color: #0162e8 !important;
 }
@@ -863,7 +863,7 @@ slide is-expanded side-menu__item {
 	height: 28px !important;
 }
 .app-sidebar .side-menu__item.active:hover {
-	color: #7282a9 !important;
+	color: #ffffff !important;
 }
 .app-sidebar .slide.active .side-menu__icon, .app-sidebar .slide.is-expanded .side-menu__icon {
 	fill: #277aec !important;
