--- a/public/assets/css-rtl/sidemenu.css
+++ b/public/assets/css-rtl/sidemenu.css
@@ -5,7 +5,27 @@
 /*shadow variables*/
 .app-sidebar .mCSB_draggerContainer {
   left: -11px !important; }
+/* .side-menu__item.active .side-menu__label {
+  background-color: #E4611D !important;
+} */
+.side-menu__item{margin: 8px 20px 10px 20px !important; border-radius: 8px !important;padding: 20px 9px !important;}
+.side-menu__label:hover{color: #000 !important;}
+.side-menu__item .side-menu__label:hover{color: #000 !important;}
+.slide .side-menu__item.active {
+  background-color: #E4611D !important;
+  color: #fff !important;
+  fill: #fff;
+  border: none !important;
 
+}
+.app-sidebar .slide.active .side-menu__item {
+  color: #525353 !important;
+}
+.side-menu .slide.active .side-menu__label, .side-menu .slide.active .side-menu__icon {
+  color: #4a4a4a !important;
+}
+.slide.is-expanded .side-menu__label .active, .slide.is-expanded .side-menu__icon .active, .slide.is-expanded .angle .active{color: #fff !important;}
+.side-menu__item .active{color: #fff !important;}
 @media (min-width: 768px) {
   .app.sidenav-toggled .app-content {
     margin-right: 80px; }
@@ -402,7 +422,7 @@
   padding: 0;
   list-style: none; }
   .side-menu .slide .side-menu__item {
-    padding: 0 20px 0 22px;
+    padding: 0 8px 0 12px;
     margin: 0;
     border-radius: 0; }
 
@@ -437,7 +457,7 @@ slide is-expanded side-menu__item {
     text-decoration: none;
     color: #0162e8; }
   .side-menu__item.active .side-menu__label {
-    color: #0162e8; }
+    color: #ffffff; }
   .side-menu__item.active .angle {
     color: #0162e8; }
   .side-menu__item.active .side-menu__icon {
@@ -463,12 +483,12 @@ slide is-expanded side-menu__item {
     font-size: 12px;
     box-shadow: none; } }
 
-.slide:hover .side-menu__label, .slide:hover .angle, .slide:hover .side-menu__icon {
-  color: #0162e8 !important;
-  fill: #0162e8 !important; }
+/* .slide:hover .side-menu__label, .slide:hover .angle, .slide:hover .side-menu__icon {
+  color: #ffffff !important;
+  fill: #ffffff !important; } */
 
-.slide.is-expanded .side-menu__label, .slide.is-expanded .side-menu__icon, .slide.is-expanded .angle {
-  color: #0162e8 !important; }
+/* .slide.is-expanded .side-menu__label, .slide.is-expanded .side-menu__icon, .slide.is-expanded .angle {
+  color: #0162e8 !important; } */
 
 .slide-item.active, .slide-item:hover, .slide-item:focus {
   text-decoration: none;
@@ -517,7 +537,7 @@ slide is-expanded side-menu__item {
   line-height: 34px;
   border-radius: 3px;
   text-align: center;
-  color: #a8b1c7;
+  color: #fe0a0a;
   fill: #5b6e88; }
 
 .side-menu__icon {
@@ -543,13 +563,7 @@ slide is-expanded side-menu__item {
   vertical-align: middle;
   font-weight: 400; }
 
-.app-sidebar .slide .side-menu__item.active::before {
-  content: '';
-  width: 3px;
-  height: 31px;
-  background: #005ee9;
-  position: absolute;
-  right: 0; }
+
 
 .app-sidebar .side-item.side-item-category {
   color: #2c364c;
@@ -994,7 +1008,7 @@ slide is-expanded side-menu__item {
   height: 28px !important; }
 
 .app-sidebar .side-menu__item.active:hover {
-  color: #7282a9 !important; }
+  color: #4f4f4f !important; }
 
 .app-sidebar .slide.active .side-menu__icon, .app-sidebar .slide.is-expanded .side-menu__icon {
   fill: #277aec  !important; }
@@ -1003,7 +1017,7 @@ slide is-expanded side-menu__item {
   fill: #277aec  !important; }
 
 .app-sidebar .slide.active .side-menu__item {
-  color: #277aec  !important; }
+  color: #3d3e41  !important; }
 
 .app-sidebar .slide-menu .sub-slide-menu a:before {
   left: 19px; }
