--- a/public/assets/css-rtl/sidemenu1.scss
+++ b/public/assets/css-rtl/sidemenu1.scss
@@ -1594,7 +1594,7 @@ transform: translate3d(0, 0, 0);
 	  display: block;
 	}
 	.app.sidenav-toggled .side-menu__item{
-		display: block;
+		display: flex;
 		margin: 0 auto;
 		padding: 10px 0;
 		text-align: center;
