--- a/public/assets/css-rtl/style.css
+++ b/public/assets/css-rtl/style.css
@@ -6395,6 +6395,7 @@ textarea.form-control.is-invalid, textarea.form-control.parsley-error {
     animation: none; } }
 
 /* ###### 3.14 Table ###### */
+.table thead th{margin-bottom: 90px !important;}
 .table {
   color: #364261; }
   .table thead th, .table thead td {
@@ -6431,8 +6432,10 @@ textarea.form-control.is-invalid, textarea.form-control.parsley-error {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #dde2ef; }
-  .table thead th {
-    vertical-align: bottom; }
+
+    /* .table  thead{margin-bottom: 70px !important;} */
+  /* .table thead th {
+    vertical-align: bottom; } */
   .table tbody + tbody {
     border-top: 2px solid #dde2ef; }
 
@@ -52619,35 +52622,44 @@ flex-wrap: wrap; } }
   a:hover{color:#000000c2 !important;}
   a .side-menu__label:focus{color:#000000c2;}
 
-  .slide.is-expanded .side-menu__label, .slide.is-expanded .side-menu__icon, .slide.is-expanded .angle {color:#000000c2 !important;}
+  /* .slide.is-expanded .side-menu__label, .slide.is-expanded .side-menu__icon, .slide.is-expanded .angle {color:#000000c2 !important;}
   .slide:hover .side-menu__label, .slide:hover .angle, .slide:hover .side-menu__icon {
-    color: #000000c2 !important;
-    fill: #000000c2 !important;
-}
+    color: #000 !important;
+    fill: #000 !important;
+} */
 .item:hover, .slide-item:focus {
   
   color: #000000c2 !important;
 }
-
+.app-sidebar .side-menu__item.active:hover {
+  color: #fff !important;
+}
 
 
 @media (max-width: 424px) {
   
        
   
-  /* .sales-cardSmall{margin-top: 100px;} */
 }
 
 @media (max-width: 920px) {
   
-  /* .sales-cardSmall{margin-top: 100px;} */
+}
+
+@media (max-width: 2000px) {
+  .w-lg-40{width:40% ;}
+  
+}
+
+@media (max-width: 992px) {
+  .w-lg-40{width:100% ;}
+  
 }
   
 .row-sm > div {
   padding-left: 5px !important;
   padding-right: 5px !important;
 }
-  /* .container-fluid{margin-top: 200px;} */
 
   .sales-cardSmall .card-body{
     padding-left:15px;
@@ -52683,10 +52695,10 @@ flex-wrap: wrap; } }
 
 
 /* ############################################################################### */
-.side-menu__item,h1,h2,a,h3,h4,h5,.main-content-label,.panel-tabs a ,th,.list-unstyled,.breadcrumb-item a{
+.side-menu__item .side-menu__label,h1,h2,h3,h4,h5,h6,.main-content-label,.panel-tabs a ,th,.list-unstyled,.breadcrumb-item a{
   font-family: 'Cairo', sans-serif;
 }
-p,span,td,button,label,option,select{font-family: 'Tajawal', sans-serif;}
+p,span,td,button,label,option,select,input,a{font-family: 'Tajawal', sans-serif;}
 .wizard > .steps {
   padding: 30px;
   position: absolute;
@@ -52887,4 +52899,63 @@ a.demo {
 
 .bi-pen:hover{color: red;}
 
-.examBefor,.examAfter{border-bottom: 1px solid #000;}
+.examBefor,.examAfter{border-bottom: 1px solid #000;cursor:pointer}
+
+
+
+
+.panel-tabs .active{border-bottom: 2px solid #000;}
+.w-40{width:40%}
+
+.btnAddtest{
+  margin-right: 5px;
+    position: absolute;
+    bottom: -21px;
+    left: 50%;
+    line-height: 8px;
+}
+.w-60{width:60%}
+
+
+
+
+.scrollable-menu {
+  height: auto;
+  max-height: 100%;
+  overflow-x: hidden;
+}
+
+.btnRemoveTest{ position: absolute !important; left: 50% !important;margin-bottom: -9px !important ;}
+
+.btnSaveTest{margin-top:70px !important;
+  position: absolute;
+  z-index: 150;
+  bottom:-55px;
+  left:0;
+}
+
+
+
+.dropdown-menu.show{
+  border-radius: 10px;
+  padding:10px;
+}
+
+@media (min-width: 768px){
+.app .sidenav-toggled .side-menu__item {
+    display: flex !important;
+   
+}}
+
+/* 
+
+.dropdown:hover>.dropdown-menu {
+  display: block;
+}
+
+.dropdown>.dropdown-toggle:active {
+  /*Without this, clicking will make it sticky*/
+    pointer-events: none;
+}
+.Attendance{margin-top: -50px;position: absolute; left: 50px !important;}
+	 */
