--- a/public/assets/css/closed-sidemenu.css
+++ b/public/assets/css/closed-sidemenu.css
@@ -534,13 +534,13 @@ slide is-expanded side-menu__item {
 }
 
 .slide:hover .side-menu__label, .slide:hover .angle, .slide:hover .side-menu__icon {
-  color: #0162e8 !important;
-  fill: #0162e8 !important;
+  color: #4a4848 !important;
+  fill: #565555 !important;
 }
 
-.slide.is-expanded .side-menu__label, .slide.is-expanded .side-menu__icon, .slide.is-expanded .angle {
+/* .slide.is-expanded .side-menu__label, .slide.is-expanded .side-menu__icon, .slide.is-expanded .angle {
   color: #0162e8 !important;
-}
+} */
 
 .slide-item.active, .slide-item:hover, .slide-item:focus {
   text-decoration: none;
@@ -998,7 +998,7 @@ slide is-expanded side-menu__item {
 }
 
 .app-sidebar .side-menu__item.active:hover {
-  color: #7282a9 !important;
+  color: #ffffff !important;
 }
 
 .app-sidebar .slide.active .side-menu__icon, .app-sidebar .slide.is-expanded .side-menu__icon {
