--- a/public/assets/css/sidemenu1.css
+++ b/public/assets/css/sidemenu1.css
@@ -597,13 +597,13 @@ slide is-expanded side-menu__item {
 }
 
 .slide:hover .side-menu__label, .slide:hover .angle, .slide:hover .side-menu__icon {
-  color: #0162e8 !important;
-  fill: #0162e8 !important;
+  color: #2a2a2a !important;
+  fill: #ffffff !important;
 }
-
+/* 
 .slide.is-expanded .side-menu__label, .slide.is-expanded .side-menu__icon, .slide.is-expanded .angle {
   color: #0162e8 !important;
-}
+} */
 
 .slide-item.active, .slide-item:hover, .slide-item:focus {
   text-decoration: none;
