--- a/public/assets/plugins/sidebar/sidebar.css
+++ b/public/assets/plugins/sidebar/sidebar.css
@@ -1,7 +1,4 @@
-/* All the default sidebar styles */
-/* toggle button settings */
-/* Note: this disables the navbar-toggle class's hide function. set visibility with the boostrap visible/hidden classes */
-/* Note: this also disables the navbar-header class positioning settings in small screens. */
+
 .navbar.navbar-static .navbar-header {
     float: left;
 }
@@ -9,13 +6,15 @@
 .navbar .navbar-toggle.toggle-left {
     float: left;
     margin-left: 15px;
+  
 }
+.imgUser{margin: auto;margin-top: 0px; margin-bottom: 0px;}
 
 .navbar .navbar-toggle.toggle-right {
     float: right;
     margin-right: 15px;
 }
-
+.m-auto{margin: auto !important;}
 .navbar .navbar-toggle.toggle-sidebar, [data-toggle="sidebar"] {
     display: block;
 }
@@ -31,6 +30,7 @@
 }
 .sidebar-left {
     left: 0;
+    /* right: 0; */
 }
 .sidebar-right {
     right: 0;
@@ -156,4 +156,33 @@
 	-o-transform: translate(0,0);
 	transform: translate(0,0);
 	box-shadow: none;
+}
+
+
+
+
+
+
+
+
+/* drawer sid usser before */
+#side-drawer {
+    
+    height: auto;
+    max-height: 100%;
+    overflow-x: hidden;
+    height: 100vh;
+    width: 300px;  /*Ideal width for sidebar accdg to https://forums.envato.com/t/standard-sidebar-width/75633*/
+    top: 0;
+    left: -336px;
+    z-index: 1032;  /*z-index of standard bootstrap navbar is 1030 + 1 offset due to side-drawer-void*/
+    transition: left 0.25s ease;
+}
+
+#side-drawer-void {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    z-index: 1031;  /*z-index of standard bootstrap navbar is 1030*/
+    background: rgb(255 255 255 / 0%);
 }
