--- a/public/site/style.css
+++ b/public/site/style.css
@@ -1,4 +1,5 @@
 /*reset css */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 html{
   direction: rtl;
 }
@@ -39,7 +40,7 @@ html{
      text-indent: 0;
      list-style-type: none;
   }
-  button{
+  a{
     cursor: pointer;
   }
   input, button, textarea, select {
@@ -72,6 +73,7 @@ html{
   .wrap {
     margin-right: auto; /* 1 */
     margin-left:  auto; /* 1 */
+    /* margin-bottom: 20px; */
 
     max-width: 960px; /* 2 */
 
@@ -167,13 +169,13 @@ html{
     padding: .4rem 2rem;
 
   }
-  .btn_primery button{
-    width: 100% ;
+  .btn_primery{
     background: #7fbe41;
     border: none;
     color: white;
     border-radius: 10px;
-    padding-block: .6rem;
+    /* padding-block: .6rem; */
+    width: 49%;
 
   }
   span.accepted{
@@ -190,15 +192,17 @@ html{
     gap: 1rem;
     margin-top: .8rem;
   }
-  .btn_links button{
+  .btn_links a {
     background: #076f6d;
     color: white;
+    text-align: center;
     border: none;
     flex: 1;
-    padding: 1rem 0;
-    border-radius: 15px;
-
-  }
+    padding: 8px;
+    /* padding: 0rem 0; */
+    border-radius: 8px;
+    margin-bottom: 2px;
+}
   .card{
     box-shadow: 0px 2px 10px rgb(185, 185, 185);
     border-radius: 10px;
@@ -258,7 +262,7 @@ html{
     padding: 20px;
 
   }
-  .qr_container .btn_links button{
+  .qr_container .btn_links a{
     padding: 1rem 3rem;
 
   }
@@ -270,6 +274,7 @@ html{
     align-items: baseline;
     justify-content: center;
     height: 100%;
+
   }
   .overlay{
     position: absolute;
@@ -289,3 +294,32 @@ html{
   font-size: 2rem;
   cursor: pointer;
 }
+
+.mb-5{margin-bottom: 50px;}
+
+.btn-border-block{
+    background-color: white !important;
+    color: #033335 !important;
+    border: 1px solid #000 !important;
+    transition: .5s;
+
+}
+.btn-border-block:hover{
+    background-color: #000000 !important;
+    color: rgb(255, 255, 255) !important;
+    transition: .5s;
+  }
+.btn-border-block:hover i {
+    color: rgb(255, 255, 255) !important;
+    transition: .5s;
+  }
+ /* i:hover{
+    color: rgb(255, 0, 0) !important;
+    transition: .5s;
+} */
+.ml-3{margin-left: 10px;}
+.w-25{width: 50% !important;}
+.tx-white{color: white !important;}
+button .disabled{background-color:red !important;}
+button .btn_primery .disabled {opacity: .5px !important;}
+button:disabled {opacity: .5}
