--- a/public/site/style.css
+++ b/public/site/style.css
@@ -174,7 +174,7 @@ html{
     border: none;
     color: white;
     border-radius: 10px;
-    /* padding-block: .6rem; */
+    padding-block: .3rem;
     width: 49%;
 
   }
@@ -198,11 +198,12 @@ html{
     text-align: center;
     border: none;
     flex: 1;
-    padding: 8px;
-    /* padding: 0rem 0; */
+    /* padding: 8px; */
+    padding-block: .3rem;
     border-radius: 8px;
-    margin-bottom: 2px;
+    /* margin-bottom: 2px; */
 }
+
   .card{
     box-shadow: 0px 2px 10px rgb(185, 185, 185);
     border-radius: 10px;
@@ -296,6 +297,7 @@ html{
 }
 
 .mb-5{margin-bottom: 50px;}
+.mt-2{margin-top: 20px !important;}
 
 .btn-border-block{
     background-color: white !important;
@@ -310,7 +312,7 @@ html{
     transition: .5s;
   }
 .btn-border-block:hover i {
-    color: rgb(255, 255, 255) !important;
+    color: rgb(255, 0, 0) !important;
     transition: .5s;
   }
  /* i:hover{
