--- a/public/site/style.css
+++ b/public/site/style.css
@@ -283,6 +283,7 @@ html{
     bottom: 0;
     left: 0;
     right: 0;
+    height: 117%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 99;
     display: none;
