--- a/public/site/style.css
+++ b/public/site/style.css
@@ -131,7 +131,7 @@ html{
     border-bottom: 1px solid grey;
     padding-block: .5rem;
   }
-
+.tx-14{font-size: 13px;}
   .vedio_discription .disc p{
     color: grey;
     line-height: 1.8;
