--- a/public/site/style.css
+++ b/public/site/style.css
@@ -331,41 +331,130 @@ button .disabled{background-color:red !important;}
 .tx-25{font-size: 25px;font-weight: bolder;}
 .justify-content-between{justify-content: space-between}
 .d-flex{display: flex; align-items: center;}
-.dropdown {
-    text-align: center;
-    width: 70%;
-    position: relative;
-    align-items: center;
-    display: inline-block;
-    justify-content: start;
-    background-color: #076f6d;
-    cursor: pointer;
-    padding: 5px;
-    border-radius: 10px;
-  }
-  .dropdown span{    color: white;}
-  .dropdown-content {
-    text-align: right;
-    margin-top: 6px;
-    display: none;
-    border-radius: 9px;
-    width: 100%;
-    /* border: 5px; */
-    position: absolute;
-    background-color: #f9f9f9;
-    /* min-width: 160px; */
-    box-shadow: 1px 8px 16px 8px rgb(0 0 0 / 20%);
-    z-index: 1;
+
+
+  .container {
+    max-width: 800px;
+    width: 800px;
+    padding: 23px 8px 0px 6px;
 }
-  .dropdown-content p{padding:5px 12px;border-radius: 5px;}
-  .dropdown:hover .dropdown-content {
+  .container .text{
+    font-family: 'Cairo', sans-serif;
+    text-align: center;
+    font-size: 22px;
+    font-weight: 600;
+background-color: #262525;
+    /* background: -webkit-linear-gradient(right, #56d8e4, #9f01ea, #56d8e4, #9f01ea); */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .container form{
+    padding: 30px 0 0 0;
+  }
+  .container form .form-row{
     display: block;
+    margin: 32px 0;
+  }
+  form .form-row .input-data{
+    width: 100%;
+    height: 40px;
+    margin: 35px 0!important;
+
+    /* margin: 0 20px; */
+    position: relative;
+  }
+  form .form-row .textarea{
+    height: 70px;
+  }
+  .input-data input{
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none !important;
+    font-size: 17px;
+    border-bottom: 2px solid rgba(0,0,0, 0.12);
+  }
+  .input-data input:focus ~ label, .textarea textarea:focus ~ label,
+  .input-data input:valid ~ label, .textarea textarea:valid ~ label{
+    transform: translateY(-20px);
+    font-size: 14px;
+    color: #3498db;
   }
 
-  .dropdown-content p:hover{
-    background-color: rgb(216, 216, 214);
+  .input-data label{
+    position: absolute;
+    pointer-events: none;
+    bottom: 10px;
+    font-size: 16px;
+    transition: all 0.3s ease;
   }
 
-
-
-
+  .input-data .underline{
+    position: absolute;
+    bottom: 0;
+    height: 2px;
+    width: 100%;
+  }
+  .input-data .underline:before{
+    position: absolute;
+    content: "";
+    height: 2px;
+    width: 100%;
+    background: #3498db;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.3s ease;
+  }
+  .input-data input:focus ~ .underline:before,
+  .input-data input:valid ~ .underline:before,
+  .textarea textarea:focus ~ .underline:before,
+  .textarea textarea:valid ~ .underline:before{
+    transform: scale(1);
+  }
+  .submit-btn .input-data{
+    overflow: hidden;
+    height: 45px!important;
+    width: 50%!important;
+  }
+  .submit-btn .input-data .inner{
+    height: 100%;
+    width: 300%;
+    position: absolute;
+    left: -100%;
+    background: -webkit-linear-gradient(right, #56d8e4, #9f01ea, #56d8e4, #9f01ea);
+    transition: all 0.4s;
+  }
+  .submit-btn .input-data:hover .inner{
+    left: 0;
+  }
+  .submit-btn .input-data input{
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 17px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+    outline: none !important;
+  }
+  /* @media (max-width: 5000px) {
+    .container .text{
+      font-size: 30px;
+    }
+    .container form{
+      padding: 10px 0 0 0;
+    }
+    .container form .form-row{
+      display: block;
+    }
+    form .form-row .input-data{
+      margin: 35px 0!important;
+    }
+    .submit-btn .input-data{
+      width: 40%!important;
+    }
+  } */
