--- a/public/assets/plugins/wizard/style.css
+++ b/public/assets/plugins/wizard/style.css
@@ -1,12 +1,4 @@
-body {
-  background-color: #ffffff;
-  color: #444444;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  margin: 0;
-  padding: 0;
-}
+
 .wizard-content-left {
   background-blend-mode: darken;
   background-color: rgba(0, 0, 0, 0.45);
@@ -25,7 +17,7 @@ body {
 }
 
 .form-wizard {
-  color: #888888;
+  color: #363535;
   padding: 30px;
 }
 .form-wizard .wizard-form-radio {
@@ -87,15 +79,7 @@ body {
 .form-wizard .form-wizard-header {
   text-align: center;
 }
-.form-wizard .form-wizard-next-btn, .form-wizard .form-wizard-previous-btn, .form-wizard .form-wizard-submit {
-  background-color: #d65470;
-  color: #ffffff;
-  display: inline-block;
-  min-width: 100px;
-  min-width: 120px;
-  padding: 10px;
-  text-align: center;
-}
+
 .form-wizard .form-wizard-next-btn:hover, .form-wizard .form-wizard-next-btn:focus, .form-wizard .form-wizard-previous-btn:hover, .form-wizard .form-wizard-previous-btn:focus, .form-wizard .form-wizard-submit:hover, .form-wizard .form-wizard-submit:focus {
   color: #ffffff;
   opacity: 0.6;
@@ -104,21 +88,10 @@ body {
 .form-wizard .wizard-fieldset {
   display: none;
 }
-.form-wizard .wizard-fieldset.show {
-  display: block;
-}
-.form-wizard .wizard-form-error {
-  display: none;
-  background-color: #d70b0b;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 2px;
-  width: 100%;
-}
+
+
 .form-wizard .form-wizard-previous-btn {
-  background-color: #fb1647;
+  background-color: #e4611d;
 }
 .form-wizard .form-control {
   font-weight: 300;
@@ -137,24 +110,24 @@ body {
 }
 .form-wizard .wizard-form-text-label {
   position: absolute;
-  left: 10px;
+  right: 10px;
   top: 16px;
   transition: 0.2s linear all;
 }
 .form-wizard .focus-input .wizard-form-text-label {
-  color: #d65470;
+  color: #171717;
   top: -18px;
   transition: 0.2s linear all;
-  font-size: 12px;
+  font-size: 15px;
 }
 .form-wizard .form-wizard-steps {
   margin: 30px 0;
 }
-.form-wizard .form-wizard-steps li {
+/* .form-wizard .form-wizard-steps li {
   width: 25%;
   float: left;
   position: relative;
-}
+} */
 .form-wizard .form-wizard-steps li::after {
   background-color: #f3f3f3;
   content: "";
@@ -182,16 +155,44 @@ body {
 .form-wizard .form-wizard-steps li:last-child::after {
   width: 50%;
 }
+
 .form-wizard .form-wizard-steps li.active span, .form-wizard .form-wizard-steps li.activated span {
-  background-color: #d65470;
-  color: #ffffff;
+    background-color: #0162dd;
+    color: #ffffff;
+    border: 1px solid #786f6f;
+}
+
+/* .form-wizard .form-wizard-steps li span {
+    background-color: #dddddd;
+    border-radius: 50%;
+    display: inline-block;
+    height: 24px;
+    line-height: 25px;
+    position: relative;
+    text-align: center;
+    width: 24px;
+    z-index: 1;
+} */
+
+.form-wizard .form-wizard-steps li span {
+    border: 2px solid #b6b6b6;
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: inline-block;
+    height: 35px;
+    line-height: 32px;
+    position: relative;
+    text-align: center;
+    width: 35px;
+    z-index: 1;
 }
 .form-wizard .form-wizard-steps li.active::after, .form-wizard .form-wizard-steps li.activated::after {
-  background-color: #d65470;
-  left: 50%;
-  width: 50%;
-  border-color: #d65470;
+    background-color: #0162dd;
+    right: 19%;
+    width: 80%;
+    border-color: #0162dd;
 }
+
 .form-wizard .form-wizard-steps li.activated::after {
   width: 100%;
   border-color: #d65470;
@@ -206,6 +207,13 @@ body {
   transform: translateY(-50%);
   cursor: pointer;
 }
+
+/* .form-wizard .form-wizard-steps li.active::after, .form-wizard .form-wizard-steps li.activated::after {
+    background-color: #0162dd;
+    right: 40%;
+    width: 59%;
+    border-color: #0162dd;
+} */
 @keyframes click-radio-wave {
   0% {
     width: 25px;
@@ -225,4 +233,40 @@ body {
   .wizard-content-left {
     height: auto;
   }
+}
+.form-wizard .form-wizard-steps li {
+    width: 14%;
+    float: right;
+    position: relative;
+}
+
+
+.form-wizard .wizard-fieldset.show {
+    background-color: #fff;
+    display: block;
+    padding: 10px 30px !important;
+
+    border-radius: 30px;
+}
+.form-wizard .form-wizard-next-btn, .form-wizard .form-wizard-previous-btn, .form-wizard .form-wizard-submit {
+    border-radius: 9px;
+    background-color: #e4611d;
+    color: #ffffff;
+    display: inline-block;
+    min-width: 100px;
+    min-width: 120px;
+    padding: 10px;
+    text-align: center;
+}
+
+
+.form-wizard .wizard-form-error {
+    display: none;
+    background-color: #ff0000;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 2px;
+    width: 100%;
 }
