--- a/public/assets/plugins/wizard/style copy 3.css
+++ b/public/assets/plugins/wizard/style copy 3.css
@@ -105,20 +105,39 @@ ul.navbar-nav {
 
 .f1-steps { overflow: hidden; position: relative; margin-top: 20px; }
 
-.f1-progress { position: absolute; top: 24px; left: 0; width: 100%; height: 1px; background: #ddd; }
-.f1-progress-line { position: absolute; top: 0;   right: 14px; height: 1px; background: #f35b3f; }
+/* .f1-progress { position: absolute; top: 24px; left: 0; width: 100%; height: 1px; background: #ddd; } */
+/* .f1-progress-line { position: absolute; top: 0;   right: 14px; height: 1px; background: #f35b3f; } */
+.f1-step {
+    /* margin-left: 1px; */
+    position: relative;
+    float: right;
+    width: 14%;
+    /* padding: 0 5px; */
+}
 
-.f1-step { position: relative; float: right; width: 14%; padding: 0 5px; }
+
+
+.f1-step { position: relative; float: right; width: 14%;  }
 
 /* .f1-step-icon {
 	display: inline-block; width: 40px; height: 40px; margin-top: 4px; background: #ddd;
 	font-size: 16px; color: #fff; line-height: 40px;
 	-moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%;
 } */
-.f1-step.activated .f1-step-icon {
-	background: #fff; border: 1px solid #f35b3f; color: #f35b3f; line-height: 38px;
-}
 
+.f1-step.activated .f1-step-icon {
+    background: #f35b3f;
+    border: 1px solid #f35b3f;
+    color: #ffffff;
+    /* line-height: 38px; */
+}
+.f1-progress-line {
+    position: absolute;
+    top: 0;
+    right: 14px;
+    height: 3px;
+    background: #dddddd;
+}
 .f1-step-icon {
     display: inline-block;
     width: 30px;
@@ -157,7 +176,15 @@ ul.navbar-nav {
     background: #ddd;
 }
 .f1-buttons { text-align: right; }
-
+.f1-progress {
+    position: absolute;
+    top: 19px;
+    left: auto;
+    /* right: 90px; */
+    width: 90%;
+    height: 2px;
+    background: #ddd;
+}
 .f1 .input-error { border-color: #f35b3f; }
 
 
