update page add3

--- a/public/assets/css-rtl/style.css
+++ b/public/assets/css-rtl/style.css
@@ -53236,3 +53236,4 @@ a.demo {
     margin-bottom: 1rem;
   }
 .mg-t-15{margin-top: 15px !important;}
+.brd-btn{border-bottom: 2px solid #000; padding-bottom: 20px 0px; margin: 30px 0px;}
