--- a/public/inv/style.css
+++ b/public/inv/style.css
@@ -170,11 +170,11 @@ header{
     padding: 1rem 2rem;
     color: white;
   }
-  .btn_accept{
+  /* .btn_accept{
     background: rgba(38, 90, 232, 0.31);
     border-radius: 50px;
-    padding: .5rem 1rem;
-  }
+    /* padding: .5rem 1rem; 
+  } */
   #timePlace{
     color:#1e1e1e ;
     font-weight: 300;
